made the method getAllSorted shorter